Fix footer alignment on mobile

--- a/src/scss/shared/footer.scss
+++ b/src/scss/shared/footer.scss
@@ -51,5 +51,9 @@ footer {
       display: block;
       text-align: center;
     }
+
+    .nav a:first-child {
+      margin-left: 0;
+    }
   }
 }
